--- a/frontend/common.css
+++ b/frontend/common.css
@@ -21,7 +21,7 @@
   --control-border-color-lighter: rgba(0, 0, 0, .1);
   --control-border-color-connection: rgba(0, 0, 0, .1);
 }
-
+/*
 @font-face { font-family: "SF Mono"; font-weight: 200; font-style: normal; src: url("file:///Applications/Utilities/Terminal.app/Contents/Resources/Fonts/SFMono-Light.otf"); }
 @font-face { font-family: "SF Mono"; font-weight: 200; font-style: italic; src: url("file:///Applications/Utilities/Terminal.app/Contents/Resources/Fonts/SFMono-LightItalic.otf"); }
 @font-face { font-family: "SF Mono"; font-weight: 400; font-style: normal; src: url("file:///Applications/Utilities/Terminal.app/Contents/Resources/Fonts/SFMono-Regular.otf"); }
@@ -34,7 +34,7 @@
 @font-face { font-family: "SF Mono"; font-weight: 700; font-style: italic; src: url("file:///Applications/Utilities/Terminal.app/Contents/Resources/Fonts/SFMono-BoldItalic.otf"); }
 @font-face { font-family: "SF Mono"; font-weight: 800; font-style: normal; src: url("file:///Applications/Utilities/Terminal.app/Contents/Resources/Fonts/SFMono-Heavy.otf"); }
 @font-face { font-family: "SF Mono"; font-weight: 800; font-style: italic; src: url("file:///Applications/Utilities/Terminal.app/Contents/Resources/Fonts/SFMono-HeavyItalic.otf"); }
-
+*/
 html {
   box-sizing: border-box;
   overflow: hidden;
